--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@react-native-community/masked-view": "^0.1.10",
 		"@react-navigation/native": "^5.3.0",
 		"@react-navigation/stack": "^5.3.3",
+		"axios": "^0.19.2",
 		"expo": "~37.0.3",
 		"expo-updates": "~0.2.0",
 		"react": "~16.9.0",
@@ -23,6 +24,7 @@
 		"react-native-unimodules": "~0.9.0",
 		"react-native-vector-icons": "^6.6.0",
 		"react-native-web": "~0.11.7",
+		"reactotron-react-native": "^5.0.0",
 		"styled-components": "^5.1.0"
 	},
 	"devDependencies": {
